syntax = "proto3";

package golem.cloud.projectpolicy;


enum ProjectAction {
  VIEW_COMPONENT = 0;
  CREATE_COMPONENT = 1;
  UPDATE_COMPONENT = 2;
  DELETE_COMPONENT = 3;
  VIEW_WORKER = 4;
  CREATE_WORKER = 5;
  UPDATE_WORKER = 6;
  DELETE_WORKER = 7;
  VIEW_PROJECT_GRANTS = 8;
  CREATE_PROJECT_GRANTS = 9;
  DELETE_PROJECT_GRANTS = 10;
  VIEW_API_DEFINITION = 11;
  CREATE_API_DEFINITION = 12;
  UPDATE_API_DEFINITION = 13;
  DELETE_API_DEFINITION = 14;
}
